--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <title>You.</title>
   </head>
-  <body>
+  <body class="transparent">
     <div class="container-fluid">
       <hr />
       <h1>Happy Birthday!</h1>
