--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
 
     <title>You.</title>
   </head>
+  <main>
+    <h2>this page has been deactivated</h2>
+    <p>request for this to be reactivated.</p>
+  </main>
   <body class="transparent">
     <div class="container-fluid">
       <hr />
