--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <title>You.</title>
   </head>
   <main>
-    <h2>this page has been deactivated</h2>
+    <h2>Hello, this page has been deactivated</h2>
     <p>request for this to be reactivated.</p>
   </main>
   <body class="transparent">
