--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
 
     <title>You.</title>
   </head>
-  <main>
+  
+  <body>
+    <main class="deactiv">
     <h2>Hello, this page has been deactivated</h2>
     <p>request for this to be reactivated.</p>
   </main>
-  <body class="transparent">
-    <div class="container-fluid">
+<!--     <div class="container-fluid">
       <hr />
       <h1>Happy Birthday!</h1>
       <h2><span class="multiText1"></span>&nbsp;</h2>
@@ -66,7 +67,7 @@
         Happy birthday once again mama. <br />
         <em>I love you, Now and Forever.</em>
       </p>
-    </div>
+    </div> -->
     <script src="https://cdn.jsdelivr.net/npm/typed.js@2.0.12"></script>
     <script src="script.js"></script>
   </body>
