--- a/index.html
+++ b/index.html
@@ -23,13 +23,16 @@
 
     <title>You.</title>
   </head>
-  
   <body>
     <main class="deactiv">
-    <h2>Hello, this page has been deactivated</h2>
-    <p>request for this to be reactivated.</p>
-  </main>
-<!--     <div class="container-fluid">
+      <h3>deactivated.</h3>
+      <p>
+        this page has been deactivated
+        <br /><br /><br /><br /><br />
+        <em>...although my love for you hasn't.</em>
+      </p>
+    </main>
+    <!-- <div class="container-fluid">
       <hr />
       <h1>Happy Birthday!</h1>
       <h2><span class="multiText1"></span>&nbsp;</h2>
