--- a/index.html
+++ b/index.html
@@ -25,11 +25,9 @@
   </head>
   <body>
     <main class="deactiv">
-      <h3>deactivated.</h3>
+      <h3><span class="deactiv-h3"></span></h3>
       <p>
-        this page has been deactivated
-        <br /><br /><br /><br /><br />
-        <em>...although my love for you hasn't.</em>
+        <span class="deactiv-p"></span>
       </p>
     </main>
     <!-- <div class="container-fluid">
