--- a/msg.html
+++ b/msg.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Special Message</title>
+		<title>rawr</title>
 		<script src="https://cdn.tailwindcss.com"></script>
 		<style>
 			.fade-in {
