update tailwind cdn

--- a/sort.html
+++ b/sort.html
@@ -4,7 +4,8 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Reference Sorter</title>
-		<script src="https://cdn.tailwindcss.com"></script>
+		<!-- Correct Tailwind CDN -->
+		<script src="https://cdn.tailwindcss.com" defer></script>
 	</head>
 	<body class="bg-gray-50 min-h-screen flex flex-col items-center py-8">
 		<div class="w-full max-w-2xl bg-white shadow-md rounded-lg p-6">
