--- a/sort.html
+++ b/sort.html
@@ -8,6 +8,7 @@
 		<script src="https://cdn.tailwindcss.com" defer></script>
 	</head>
 	<body class="bg-gray-50 min-h-screen flex flex-col items-center py-8">
+		<!-- Task Status Section -->
 		<div class="w-full max-w-2xl bg-white shadow-md rounded-lg p-6">
 			<h1 class="text-2xl font-bold text-gray-800 mb-4 text-center">
 				Reference Sorter
